# Game-of-life

./: CMakeLists.txt  Game of life 0.2
